--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -93,7 +93,7 @@
 
     <div id="borderbox">
       <div id="carthead">
-        <h1 id="status-country">
+        <h1 id="breadcrumb">
           <a href="/">Shop</a>
           {% case template %}
             {% when 'collection' %}
