--- a/assets/css-shop-icons.css
+++ b/assets/css-shop-icons.css
@@ -1,6 +1,6 @@
 /* Reference: https://cdn.materialdesignicons.com/3.0.39/@charset "UTF-8"; */
 @font-face {
-  font-family: "mdi";
+  font-family: "materialdesignicons";
   src: url("materialdesignicons-webfont.ttf");
   font-weight: normal;
   font-style: normal;
@@ -10,8 +10,12 @@
 .mdi-shop::before,
 .mdi-database::before,
 .mdi-twitter::before,
-.mdi-instagram::before {
-  font-family: "mdi";
+.mdi-instagram::before,
+.mdi-cart::before,
+.mdi-info::before,
+.mdi-settings::before,
+.mdi-edit::before {
+  font-family: "materialdesignicons";
   line-height: inherit;
   font-size: inherit;
   padding-right: 0.3rem;
@@ -33,36 +37,18 @@
   content: "\f2fe";
 }
 
+.mdi-cart::before {
+  content: "\f110";
+}
+
 .mdi-info::before {
-  font-family: "mdi";
   content: "\f2fc";
-  line-height: inherit;
-  font-size: inherit;
 }
 
 .mdi-settings::before {
-  font-family: "mdi";
   content: "\f493";
-  line-height: inherit;
-  font-size: inherit;
 }
 
 .mdi-edit::before {
-  font-family: "mdi";
   content: "\f3eb";
-  line-height: inherit;
-  font-size: inherit;
-}
-
-.mdi-cart::before {
-  font-family: "mdi";
-  content: "\f110";
-  line-height: inherit;
-  font-size: inherit;
-  padding-right: 0.2rem;
-}
-
-.navicons li {
-  font-size: 1.5rem;
-  line-height: 1.5rem;
 }
