--- a/assets/css-shop-layout.css
+++ b/assets/css-shop-layout.css
@@ -41,56 +41,6 @@
   text-decoration: none;
 }
 
-#sddm .dropdown {
-  position: absolute;
-  visibility: hidden;
-  margin: 0;
-  padding: 6px 0px 6px 0;
-  z-index: 500;
-  background: orange;
-  display: table;
-}
-
-#sddm .dropdown a {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 6px 24px;
-  width: auto;
-  text-align: left;
-  z-index: 500;
-}
-
-#sddm .dropdown .menublock-noline {
-  margin-top: 0;
-}
-
-#sddm .dropdown .menublock-topline {
-  margin-top: 6px;
-  border-top: 1px solid #ddd;
-  padding-top: 6px;
-}
-
-#logo {
-  z-index: 40;
-  margin-left: 710px;
-  margin-top: 11px;
-  position: absolute;
-}
-
-#header #logo a {
-  background: none;
-}
-
-#header #logo a:hover {
-  background: none;
-}
-
-#header .status-shop-country {
-  margin-left: 12px;
-  display: none;
-}
-
 #carthead {
   border-top: 1px solid #f2eed9;
   margin: 0;
@@ -128,65 +78,31 @@ h1#cartcount {
 #cartcount a:hover {
   margin-left: -6px;
   margin-right: -6px;
-  padding: 0px 6px;
+  padding: 0 6px;
   text-decoration: none;
-}
-
-#country-flag {
-  margin-right: 12px;
-}
-
-#newshead {
-  margin: 0px 0;
-  width: 930px;
-  padding: 6px 0;
-  text-align: center;
-  display: table;
-  /*!!!!*/
-}
-
-#newshead a:hover {
-  margin-left: -6px;
-  margin-right: -6px;
-  padding: 0px 6px;
 }
 
 /* Main Content Area */
 #content {
   width: 660px;
-  margin: 48px 0px 24px 0;
+  margin: 48px 0 24px 0;
   margin-right: 24px;
   float: right;
   display: table;
 }
 
-#content h1 {
-  padding: 0px 6px;
-  margin: 0px 0px 12px 0;
-}
-
 /* Left Navigation */
 #leftsiders {
   width: 222px;
-  /*-6px for safety's sake*/
   float: left;
   text-align: left;
   margin-top: 24px;
-  /* margin-left: 24px; */
   display: table;
-  /* background-color: cyan; */
-}
-
-#leftsiders h3 {
-  margin: 0 0 10px 0;
-  padding: 0 8px;
 }
 
 ul.leftlinks {
-  padding: 0;
-  margin: 0px 0 12px 0;
+  margin: 0 0 12px 0;
   padding: 12px 0 12px 12px;
-  /* width: 174px; */
   width: 210px;
   clear: left;
 }
@@ -202,15 +118,7 @@ ul.leftlinks li a {
 
 ul.leftlinks li a:hover {
   margin-left: -6px;
-  padding: 0px 6px;
-}
-
-ul.leftcolorbox {
-  padding: 0;
-  margin: 0 0 12px 0;
-  padding: 6px 0 6px 0;
-  width: 200px;
-  clear: left;
+  padding: 0 6px;
 }
 
 hr {
@@ -226,14 +134,13 @@ hr {
   position: absolute;
   display: inline;
   z-index: 300;
-  display: inline;
   margin-top: 520px;
   margin-left: -36px;
 }
 
 /* Cart Page */
 #cart {
-  border: 1px solid #DADFCF;
+  border: 1px solid #dadfcf;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   width: 660px;
@@ -252,7 +159,7 @@ h3.saverow {
   margin-bottom: 12px;
 }
 
-/* Cart Page: Single Product Line*/
+/* Cart Page: Single Product Line */
 #line-items {
   list-style: none;
   margin: 0;
@@ -334,8 +241,6 @@ h3.saverow {
   text-align: right;
   line-height: 1.2em;
 }
-
-#update-cart {}
 
 #line-items li#total .subtotal {
   margin: 0;
@@ -442,12 +347,11 @@ h3.saverow {
 .gallery {
   width: 666px;
   display: table;
-  margin: 0px -6px -6px 0;
+  margin: 0 -6px -6px 0;
 }
 
 .gallery .product {
   float: left;
-  width: 214px;
   width: 214px;
   margin: 0 6px 6px 0;
   border: 1px solid #ddd;
@@ -470,7 +374,7 @@ h3.saverow {
 #pagination {
   display: table;
   clear: left;
-  margin: 24px 0px 0px 0;
+  margin: 24px 0 0 0;
 }
 
 #pagination a {
@@ -501,7 +405,7 @@ h3.saverow {
   border-bottom: 1px solid black;
 }
 
-/* Search Pages (mostly identical to the Collection Page)*/
+/* Search Pages (mostly identical to the Collection Page) */
 #searchpage {
   margin: 0;
   padding: 0;
@@ -509,20 +413,19 @@ h3.saverow {
 
 #searchpage h1 {
   width: 648px;
-  /* -12px sides padding taken off*/
 }
 
 /* Product Pages */
 #content-product {
   width: 672px;
-  margin: 24px 0px 18px 24px;
+  margin: 24px 0 18px 24px;
   float: left;
   display: table;
 }
 
 #content-product h1 {
-  padding: 0px 6px;
-  margin: 0px 0px 12px 0;
+  padding: 0 6px;
+  margin: 0 0 12px 0;
 }
 
 #productpage {
@@ -568,7 +471,7 @@ h3.saverow {
 .bigsquare {
   width: 660px;
   height: 660px;
-  border: 0px solid #ccc;
+  border: 0 solid #ccc;
 }
 
 a.productimage {
@@ -581,7 +484,7 @@ a.productimage {
 
 a.productimage-small {
   width: 115px;
-  margin: 5px 0px 5px 10px;
+  margin: 5px 0 5px 10px;
   padding: 10px 0;
   text-align: center;
   float: left;
@@ -643,7 +546,7 @@ ul#variants li label {
   width: 198px;
   padding-top: 12px;
   border-top: 1px lightgrey solid;
-  margin: 24px 0px 0px 0;
+  margin: 24px 0 0 0;
 }
 
 #description p {
@@ -655,7 +558,7 @@ ul#variants li label {
   width: 198px;
   padding-top: 12px;
   border-top: 1px lightgrey solid;
-  margin: 12px 0px 0px 0;
+  margin: 12px 0 0 0;
 }
 
 .productinfo {
@@ -716,7 +619,7 @@ ul#variants li label {
   padding: 3px 6px;
   margin-top: 144px;
   margin-left: 122px;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .new {
@@ -762,13 +665,13 @@ ul#variants li label {
 
 /* Product Page - Related */
 #related {
-  margin: 24px 0px 0px 0;
+  margin: 24px 0 0 0;
   border-top: 1px lightgrey dotted;
   padding-top: 48px;
 }
 
 #related h2 {
-  margin: 6px 0px 12px 0;
+  margin: 6px 0 12px 0;
 }
 
 /* Footer */
@@ -821,7 +724,6 @@ ul#variants li label {
 #footer .spacedot {
   vertical-align: top;
   visibility: hidden;
-  /*visible*/
   line-height: 36px;
   display: inline;
   float: left;
