raw implementation of flexible width layout

--- a/assets/checkout.scss.liquid
+++ b/assets/checkout.scss.liquid
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald);
 
-.header {
+.appheader {
 	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
   	background: #0d8dff;
 }
@@ -37,7 +37,7 @@
 
 .btn:hover  {
   background: #00db67;
-} 
+}
 
 .field.field--focus {
   box-shadow: 0 0 0 2px #0d8dff;
