--- a/snippets/sidebar-left.liquid
+++ b/snippets/sidebar-left.liquid
@@ -1,4 +1,4 @@
-<div id="leftsiders">
+<div id="sideBox">
   <ul class="leftlinks" id="blend-border">
     <!-- list available collections  -->
     {% for link in linklists.main-menu.links %}
