--- a/assets/css-base.scss
+++ b/assets/css-base.scss
@@ -1,3 +1,8 @@
+$cell: 16rem;
+$cell-margin: 0.5rem;
+$content-min-width: 2 * $cell + 3 * $cell-margin;
+$breakpoint: 480px;
+
 html {
   height: 100%;
 }
@@ -21,4 +26,60 @@ body {
   width: 942px;
   height: 100%;
   padding: 0;
+}
+
+#autocenterbox {
+  margin: 0 auto;
+  // background-color: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  @media only screen
+    and (max-device-width: $breakpoint) {
+    width: 100%;
+  }
+
+  @media only screen
+    and (min-device-width: $breakpoint) {
+    min-width: $content-min-width;
+  }
+
+  // 2 column container
+  @media only screen
+    and (min-width: (2 * $cell + 3 * $cell-margin))
+    and (max-width: (3 * $cell + 4 * $cell-margin)) {
+    width: 2 * $cell + 3 * $cell-margin;
+    background-color: #EF3038;
+  }
+  // 3 column container
+  @media only screen
+    and (min-width: (3 * $cell + 4 * $cell-margin))
+    and (max-width: (4 * $cell + 5 * $cell-margin)) {
+    width: 3 * $cell + 4 * $cell-margin;
+    background-color: #03C03C;
+  }
+  // 4 column container
+  @media only screen
+    and (min-width: (4 * $cell + 5 * $cell-margin))
+    and (max-width: (5 * $cell + 6 * $cell-margin)) {
+    width: 4 * $cell + 5 * $cell-margin;
+    background-color: #2243B6;
+  }
+  // 5 column container
+  @media only screen
+    and (min-width: (5 * $cell + 6 * $cell-margin))
+    and (max-width: (6 * $cell + 7 * $cell-margin)) {
+    width: 5 * $cell + 6 * $cell-margin;
+    background-color: orange;
+  }
+  // 6 column container
+  @media only screen
+    and (min-width: (6 * $cell + 7 * $cell-margin)) {
+    width: 6 * $cell + 7 * $cell-margin;
+    background-color: white;
+  }
+
+  min-height: 100%;
+  // background: @color-0;
 }
