--- a/assets/css-colors-background.scss
+++ b/assets/css-colors-background.scss
@@ -3,10 +3,10 @@ html {
   background-attachment: fixed;
 }
 
-#autocenterbox {
-  background: none;
-}
+// #autocenterbox {
+//   background: none;
+// }
 
-#borderbox {
+#appbody {
   background-color: rgba(255, 255, 255, 0.5);
 }
