global config settings for colors and dimensions
improved resizing behaviour

--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -1,8 +1,10 @@
+/* DEBUG */
+
 #sideBox {
-  background-color: lightsalmon;
+  // background-color: lightsalmon;
 }
 
 #mainBox {
   // background-color: {{ settings.color-sidebar }};
-  background-color: green;
+  // background-color: lightgreen;
 }
