--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -1,6 +1,6 @@
-$color-tab: #f2eed9;
-$color-logo: #0ff;
-$color-linkmenu: rgba(0, 230, 230, 0.6);
+$color-header: {{ settings.color-header }};
+$color-header-link: rgba(0, 230, 230, 0.6);
+$color-logo: {{ settings.color-logo }};
 $color-link: dodgerblue;
 $color-sidebox-text: {{ settings.color-sidebox-text }};
 $color-sidebox-link: {{ settings.color-sidebox-link }};
@@ -14,10 +14,6 @@ a:hover {
   color: $color-link;
 }
 
-// #contentbox {
-//   background-color: white;
-// }
-
 /* Header */
 body {
   #appheader {
@@ -26,7 +22,7 @@ body {
     .tab-on {
       a,
       a:visited {
-        background-color: $color-tab;
+        background-color: $color-header;
         color: $color-logo;
       }
     }
@@ -53,7 +49,7 @@ body #appheader #sddm .tab-off a:hover {
 }
 
 #carthead {
-  background-color: $color-tab;
+  background-color: $color-header;
 }
 
 #carthead #breadcrumb {
@@ -63,13 +59,13 @@ body #appheader #sddm .tab-off a:hover {
 #breadcrumb a,
 #cartcount,
 #cartcount a {
-  color: $color-linkmenu;
+  color: $color-header-link;
 }
 
 #breadcrumb a:hover,
 #cartcount a:hover {
   color: $color-black;
-  background-color: $color-linkmenu;
+  background-color: $color-header-link;
 }
 
 /* Left Navigation */
@@ -190,7 +186,7 @@ h3.saverow {
   background-color: white;
 }
 
-.gallery .product {
+.product {
   background-color: MintCream;
 }
 
@@ -214,7 +210,7 @@ h3.saverow {
   background: white;
 }
 
-.gallery .product .money {
+.product .money {
   color: $color-black;
 }
 
