fixed prodcut text weight and size for collections and index

--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -309,14 +309,14 @@ h3.saverow {
   font-weight: bold;
 }
 
-#frontpage p.money {
-  margin: 2px 0;
-}
+// #frontpage p.money {
+//   margin: 2px 0;
+// }
 
-#frontpage h3 {
-  margin: 0;
-  padding: 0;
-}
+// #frontpage h3 {
+//   margin: 0;
+//   padding: 0;
+// }
 
 #frontpage .coverpics {
   width: 100%;
